--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <button onclick="searchWeather()">search</button>
             </div>
         </div>
+        <div id="loading"></div>
         <div id="city-description"></div>
         <div id="current-weather"></div>
         <div id="weather-forecast"></div>
